general updated and bugfix
