# routes/user.py
@@ -4,13 +4,13 @@ from config.jwt_auth import token_required
 
 user_bp = Blueprint('user', __name__, url_prefix='/user')
 
-@user_bp.route('/<id_user>', methods=['GET'])
+@user_bp.route('/query/<id_user>', methods=['GET'])
 @token_required
 def get_bookings(current_user, id_user):
     response, status_code = get_user_controller(current_user, id_user)
     return jsonify(response), status_code
 
-@user_bp.route('/<user_id>', methods=['PUT'])
+@user_bp.route('/update/<id_user>', methods=['PUT'])
 @token_required
-def update_user_route(current_user, user_id):
-    return update_user_controller(current_user, user_id)
+def update_user_route(current_user, id_user):
+    return update_user_controller(current_user, id_user)
